feat: generalize environment operations
